// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with imageUrl renders correctly 1`] = `
<img
  alt={undefined}
  src="foo"
  style={
    Object {
      "backgroundColor": "#ddd",
      "borderRadius": 2,
      "display": "inline-block",
      "height": "auto",
      "marginRight": 16,
      "maxWidth": "100%",
      "objectFit": "cover",
      "width": 400,
    }
  }
  title={undefined}
/>
`;

exports[`without imageUrl renders correctly 1`] = `
<img
  alt={undefined}
  src="/images/avatar.png"
  style={
    Object {
      "backgroundColor": "#ddd",
      "borderRadius": 2,
      "display": "inline-block",
      "height": "auto",
      "marginRight": 16,
      "maxWidth": "100%",
      "objectFit": "cover",
      "width": 400,
    }
  }
  title={undefined}
/>
`;
